новый service worker

--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Обратный отсчет до возвращения домой</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <!-- PWA метатеги -->
     <meta name="theme-color" content="#1a2980">
     <meta name="description" content="Обратный отсчет до окончания экспедиции">
-    <link rel="manifest" href="manifest.json">
-    <link rel="icon" href="icons/icon-192x192.png" type="image/png">
+    <link rel="manifest" href="./manifest.json">
+    <link rel="icon" href="./icons/icon-192x192.png" type="image/png">
+    <!-- Дополнительные метатеги для PWA -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="Countdown">
+    <link rel="apple-touch-icon" href="./icons/icon-192x192.png">
 </head>
 <body>
     <!-- ===== ЧАЙКИ И МОРЕ (СКРЫТЫ НА МОБИЛЬНЫХ) ===== -->
@@ -255,6 +260,6 @@
         </div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
